[package]
name = "solana_libra_wallet"
version = "0.0.0-sol6"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra wallet"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
rust-crypto = "0.2"
log = "0.4.7"
rand = "0.6.5"
rand_core = "0.4.0"
hex = "0.3"
byteorder = "1.3.2"
serde = "1.0.96"
tiny-keccak = "1.5.0"
protobuf = "2.7"
sha3 = "0.8.2"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"

[dependencies.types]
path = "../../types"
package = "solana_libra_types"

[dependencies.libra_crypto]
path = "../../crypto/legacy_crypto"
package = "solana_libra_crypto"

[dependencies.proto_conv]
path = "../../common/proto_conv"
package = "solana_libra_proto_conv"

[dependencies.failure]
path = "../../common/failure_ext"
package = "solana_libra_failure_ext"

[dev-dependencies]
tempfile = "3.1.0"
