[package]
name = "libra_wallet"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
rust-crypto = "0.2"
rand = "0.6.5"
rand_core = "0.4.2"
hex = "0.3"
byteorder = "1.3.2"
serde = "1.0.96"
sha3 = "0.8.2"
sha2 = "0.8.0"
solana-libra-types = { path = "../../types", version = "0.1.0" }

[dependencies.ed25519-dalek]
version = "1.0.0-pre.1"

[dependencies.libra_crypto]
path = "../../crypto/crypto"
version = "0.1.0"
package = "solana-libra-crypto"

[dependencies.solana_libra_canonical_serialization]
path = "../../common/canonical_serialization"
version = "0.1.0"

[dependencies.failure]
path = "../../common/failure_ext"
version = "0.1.0"
package = "solana_libra_failure_ext"

[dev-dependencies]
solana-libra-types = { path = "../../types", version = "0.1.0", features = ["testing"]}
solana-libra-tools = { path = "../../common/tools", version = "0.1.0"}
