[package]
name = "solana_libra_build_helpers"
version = "0.0.0-sol13"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra build_helpers"
license = "Apache-2.0"
edition = "2018"

[dependencies]
protoc-grpcio = "0.3.1"
walkdir = "2.2.8"

grpcio-client = { path = "../grpcio-client", package = "solana_libra_grpcio-client", version = "0.0.0-sol13" }
