[package]
name = "solana_libra_canonical_serialization"
version = "0.0.0"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
byteorder = "1.3.2"

failure = { path = "../failure_ext", package = "solana_libra_failure_ext", version = "0.0.0" }

[dev-dependencies]
hex = "0.3"
