[package]
name = "solana_libra_canonical_serialization"
version = "0.0.0-sol15"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra canonical_serialization"
license = "Apache-2.0"
edition = "2018"

[dependencies]
byteorder = "1.3.2"

failure = { path = "../failure_ext", package = "solana_libra_failure_ext", version = "0.0.0-sol15" }

[dev-dependencies]
hex = "0.3"
