[package]
name = "solana_libra_channel"
version = "0.0.0-sol12"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra channel"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "=0.3.0-alpha.17", package = "futures-preview" }
lazy_static = "1.3.0"
metrics = { path = "../metrics", package = "solana_libra_metrics", version = "0.0.0-sol12" }

[dev-dependencies]
rusty-fork = "0.2.1"
