[package]
name = "solana-libra-channel"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "=0.3.0-alpha.19", package = "futures-preview" }
lazy_static = "1.3.0"
solana-libra-logger = { path = "../logger", version = "0.1.0" }
solana-libra-metrics = { path = "../metrics", version = "0.1.0" }

[dev-dependencies]
rusty-fork = "0.2.1"
