[package]
name = "solana-libra-channel"
version = "0.0.1-sol2"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra channel"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "=0.3.0-alpha.19", package = "futures-preview" }
lazy_static = "1.3.0"
solana_libra_logger = { path = "../logger", version = "0.0.1-sol2" }
solana_libra_metrics = { path = "../metrics", version = "0.0.1-sol2" }

[dev-dependencies]
rusty-fork = "0.2.1"
