[package]
name = "solana_libra_debug_interface"
version = "0.0.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "0.4.3", default-features = false, features = ["protobuf-codec"] }
futures = "0.1.28"
protobuf = "2.7"

failure = { path = "../failure_ext", package = "solana_libra_failure_ext", version = "0.0.0" }
jemalloc = { path = "../jemalloc", package = "solana_libra_jemalloc", version = "0.0.0" }
logger = { path = "../logger", package = "solana_libra_logger", version = "0.0.0" }
metrics = { path = "../metrics", package = "solana_libra_metrics", version = "0.0.0" }

[build-dependencies]
build_helpers = { path = "../build_helpers", package = "solana_libra_build_helpers", version = "0.0.0" }
