[package]
name = "solana_libra_debug_interface"
version = "0.0.1-sol2"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra debug interface"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bytes = "0.4.12"
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
futures = "0.1.28"
prost = "0.5.0"
serde_json = "1.0"
lazy_static = "1.3.0"

failure = { package = "solana_libra_failure_ext", path = "../failure_ext", version = "0.0.1-sol2" }
solana-libra-logger = { path = "../logger", version = "0.0.1-sol2" }
solana-libra-metrics = { path = "../metrics", version = "0.0.1-sol2" }

[build-dependencies]
grpcio-compiler = { version = "0.5.0-alpha.2", default-features = false, features = ["prost-codec"] }
