[package]
name = "solana-libra-executable-helpers"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
slog-scope = "4.0"

solana-libra-config = { path = "../../config"}
solana_libra_crash_handler = { path = "../crash_handler" }
solana-libra-logger =  { path = "../logger" }
solana-libra-metrics = { path = "../metrics" }
