[package]
name = "solana-libra-executable-helpers"
version = "0.0.1-sol3"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra executable helpers"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
slog-scope = "4.0"

solana_libra_config = { path = "../../config", version = "0.0.1-sol3"}
solana_libra_crash_handler = { path = "../crash_handler", version = "0.0.1-sol3" }
solana_libra_logger =  { path = "../logger", version = "0.0.1-sol3" }
solana_libra_metrics = { path = "../metrics", version = "0.0.1-sol3" }
