[package]
name = "solana_libra_executable_helpers"
version = "0.0.0-sol12"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra executable_helpers"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
clap = "2.32.0"
slog-scope = "4.0"

config = { path = "../../config", package = "solana_libra_config", version = "0.0.0-sol12" }
crash_handler = { path = "../crash_handler", package = "solana_libra_crash_handler", version = "0.0.0-sol12" }
logger =  { path = "../logger", package = "solana_libra_logger" }
metrics = { path = "../metrics", package = "solana_libra_metrics", version = "0.0.0-sol12" }
