[package]
name = "solana_libra_failure_ext"
version = "0.0.0-sol5"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
failure = "0.1.3"

failure_macros = { path = "failure_macros", package = "solana_libra_failure_macros", version = "0.0.0-sol5" }
