[package]
name = "solana_libra_failure_ext"
version = "0.0.0-sol15"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra failure_ext"
license = "Apache-2.0"
edition = "2018"

[dependencies]
failure = "0.1.3"

failure_macros = { path = "failure_macros", package = "solana_libra_failure_macros", version = "0.0.0-sol15" }
