[package]
name = "solana_libra_failure_ext"
version = "0.0.1-sol4"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra failure ext"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
edition = "2018"

[dependencies]
failure = "0.1.3"

solana_libra_failure_macros = { path = "failure_macros", version = "0.0.1-sol4" }
