[package]
name = "solana_libra_grpc_helpers"
version = "0.0.1-sol3"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra grpc helpers"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["compat"] }
futures_01 = { version = "0.1.28", package = "futures" }

failure = { package = "solana_libra_failure_ext", path = "../failure_ext", version = "0.0.1-sol3" }
solana_libra_logger = { path = "../logger", version = "0.0.1-sol3" }
solana_libra_metrics = { path = "../metrics", version = "0.0.1-sol3" }
