[package]
name = "solana_libra_grpcio-client"
version = "0.0.0"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
repository = "https://github.com/solana-labs/libra"
homepage = "https://solana.com/"
description = "Solana Libra grpcio-client"
license = "Apache-2.0"
edition = "2018"

[dependencies]
mktemp = "0.3"
protobuf = "=2.8.0"
protobuf-codegen = "2.*"
protoc = "2.*"
protoc-grpcio = "1.0.1"
regex = "1.1.9"
