[package]
name = "solana_libra_grpcio-extras"
version = "0.0.0"
authors = ["Solana Maintainers <maintainers@solana.com>", "Libra Association <opensource@libra.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.1.25"
grpcio = { version = "0.4.3", default-features = false, features = ["protobuf-codec"] }
